--- a/views/poster.haml
+++ b/views/poster.haml
@@ -2,7 +2,7 @@
 
 %html
   %head
-    %title=File.readlines('views/title.md').first.strip[2..-1]
+    %title=File.readlines('views/title.markdown').first.strip[2..-1]
 
     %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/bootstrap.min.css' }
 
